--- a/src/app/Auth/ui/Form/index.module.scss
+++ b/src/app/Auth/ui/Form/index.module.scss
@@ -1,8 +1,10 @@
+@use '~/styles/variables.scss' as *;
+
 .btn {
-    width: 100%;
     display: block;
-    margin: 0 auto;
+    width: 100%;
     height: 40px;
+    margin: 0 auto;
     padding: 8px 16px;
 }
 
@@ -16,16 +18,21 @@
 
 .link {
     text-decoration: none;
-    cursor: pointer;
     color: black;
-}
-
-.link:hover {
-    text-decoration: underline;
+    cursor: pointer;
+    &:hover {
+        text-decoration: underline;
+    }
 }
 
 .formAuth {
     display: flex;
     flex-direction: column;
+    width: $auth-card-width;
+    max-height: $auth-card-max-height;
+    padding: $auth-card-padding;
+    border: $auth-card-border;
+    border-radius: $auth-card-border-radius;
+    background-color: $auth-bg-white;
     row-gap: 25px;
 }
