--- a/src/shared/ui/Navbar/index.module.scss
+++ b/src/shared/ui/Navbar/index.module.scss
@@ -1,19 +1,35 @@
 @use '~/styles/variables.scss' as *;
 
 .navbar {
-  margin: 0 auto;
-  width: 1200px;
-  padding: 0 24px 0 24px;
-  height: 64px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  background-color: #fff;
-  border-radius: 10px 10px 0 0;
-  border-bottom: $border-color;
+    margin: 0 auto;
+    width: 1200px;
+    padding: 0 24px 0 24px;
+    height: 64px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #fff;
+    border-radius: 10px 10px 0 0;
+    border-bottom: $border-color;
 }
 
 .itemsWrapper {
-  display: flex;
-  gap: 0.5rem;
+    display: flex;
+    gap: 0.5rem;
+}
+
+.logout {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+    border: none;
+    border-radius: 0.375rem;
+    width: 100%;
+    color: $danger-color;
+    background-color: inherit;
+    padding: 0 $btn-padding-horizontal 0 $btn-padding-horizontal;
+    &:hover {
+        color: rgb(134, 1, 1);
+        background: rgba(255, 0, 0, 0.1);
+    }
 }
