--- a/src/shared/ui/Navbar/ui/NavbarItem/index.module.scss
+++ b/src/shared/ui/Navbar/ui/NavbarItem/index.module.scss
@@ -1,9 +1,20 @@
+@use '~/styles/variables.scss' as *;
+
 .link {
     display: flex;
+    align-items: center;
     gap: 0.5rem;
     border-radius: 0.375rem;
+    color: $text-color;
+    width: 100%;
+    height: $btn-height;
+    padding: 0 $btn-padding-horizontal 0 $btn-padding-horizontal;
+    &:not(.active):hover {
+        background: rgba(202, 204, 207, 0.6)
+    }
 }
 
 .active {
-    color: red
+    background: black;
+    color: rgba(255, 255, 255, 1);
 }
