--- a/src/index.scss
+++ b/src/index.scss
@@ -9,6 +9,7 @@ input:-webkit-autofill:active {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji", 
 }
 
 body {
