--- a/src/app/Auth/ui/Form/index.module.scss
+++ b/src/app/Auth/ui/Form/index.module.scss
@@ -29,7 +29,7 @@
     padding: $auth-card-padding;
     border: $border-color;
     border-radius: $auth-card-border-radius;
-    background-color: $auth-bg-white;
+    background-color: $bg-white;
     row-gap: 25px;
 }
 
