--- a/src/app/Auth/ui/Header/index.module.scss
+++ b/src/app/Auth/ui/Header/index.module.scss
@@ -11,5 +11,5 @@
   font-weight: $subheader-font-weight;
   line-height: $subheader-line-height;
   text-align: center;
-  color: $subheader-text-color;
+  color: $gray-color;
 }
