--- a/src/app/Main/index.module.scss
+++ b/src/app/Main/index.module.scss
@@ -1,5 +1,5 @@
+@use '~/styles/mixins.scss' as mixins; 
+
 .content {
-    max-width: 44rem;
-    margin: 0 auto;
-    padding: 1.5rem;
+    @include mixins.mainContent;
 }
