--- a/src/shared/styles/variables.scss
+++ b/src/shared/styles/variables.scss
@@ -21,10 +21,12 @@ $field-row-gap: 10px;
 // Отступы
 $btn-padding-vertical: 8px;
 $btn-padding-horizontal: 16px;
+$content-padding: 1.5rem;
 
 // Шрифты
 $font-weight-bold: 600;
 $label-font-size: 1rem;
+$icon-font-size: 1.3rem;
 
 //Auth
 // Размеры
