--- a/src/app/Main/ui/Form/index.module.scss
+++ b/src/app/Main/ui/Form/index.module.scss
@@ -1,23 +1,11 @@
 @use '~/styles/variables.scss' as *;
+@use '~/styles/mixins.scss' as *;
 
 .addPostForm {
-    margin: 0 auto;
-    width: 100%;
-    height: 100%;
-    padding: 1.5rem;
+    padding: $content-padding;
     background-color: $bg-white;
     border: $border-color;
     border-radius: $auth-card-border-radius;
-}
-
-.avatar {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    min-width: 50px;
-    min-height: 50px;
-    background-color: $light-gray-color;
-    border-radius: 50%;
 }
 
 .btn {
@@ -34,19 +22,4 @@
     display: flex;
     gap: 1.5rem;
     align-items: center;
-}
-
-.errorMessage {
-    color: $danger-color;
-    display: flex;
-    justify-content: center;
-}
-
-.input {
-    &:focus {
-        border-color: $gray-color;
-    }
-    &:hover {
-        border-color: $gray-color;
-    }
 }
